tests/baselines/reference/arrayBindingPatternOmittedExpressions.errors.txt
tests/cases/compiler/arrayBindingPatternOmittedExpressions.ts(4,9): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/compiler/arrayBindingPatternOmittedExpressions.ts(12,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/arrayBindingPatternOmittedExpressions.ts (2 errors) ====
    var results: string[];
    
    {
        let [, b, , a] = results;
            ~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        let x = {
            a,
            b
        }
    }
    
    
    function f([, a, , b, , , , s, , , ] = results) {
               ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        a = s[1];
        b = s[2];
    }